# contralor

./: .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  migrate_art15.py  pyproject.toml  requirements.txt  start-docker.sh
database/: __init__.py  connection.py  models.py
routers/: __init__.py  feriados.py  marcas.py
schemas/: __init__.py  feriado.py  marca.py
services/: __init__.py  feriado_service.py  marca_service.py
static/: manifest.json  sw.js
static/css/: style.css
static/js/: app.js
templates/: index.html
