[project]
name = "control-horario"
version = "1.0.0"
description = "Sistema de control horario UdelaR"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
]

[project.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
